--- a/english_school/css/style.css
+++ b/english_school/css/style.css
@@ -58,51 +58,6 @@ td{
     font-size: 10px;
 }
 
-.popup-list{
-    list-style: url(../img/check-mark2.png);
-    margin-left: 60px;
-}
-
-.popup-list li{
-    font-size: 18px;
-    color: #565656;
-    line-height: 25px;
-    text-align: left;
-}
-
-.popup-group .group-text{
-    font-size: 18px;
-    color: #565656;
-    line-height: 25px;
-    text-align: left;
-    padding-top: 0;
-    padding-right: 40px;
-    padding-left: 40px;
-    padding-bottom: 30px;
-    display: block;
-    height: auto;
-    max-height: 85vh;
-    overflow-y: auto;
-}
-
-.popup-group .popup-header{
-    margin-bottom: 40px;
-}
-
-.td-question{
-    font-weight: bold;
-}
-
-.last-question{
-    border-bottom: none;
-    border-left: none;
-}
-
-.last-ask{
-    border-bottom: none;
-    border-right: none;
-}
-
 body,
 footer{
     width: 100%;
@@ -198,10 +153,6 @@ header{
 
 .main-navigation{
     list-style: none;
-    width: 100%;
-    background: -o-linear-gradient(left , #edc22e 70%, #ebebeb 30%);
-    background: -webkit-gradient(linear , left top, right top , color-stop(70%, #edc22e), color-stop(30%, #ebebeb));
-    background: linear-gradient(to right , #edc22e 70%, #ebebeb 30%);
 }
 
 .nav-item{
@@ -212,17 +163,13 @@ header{
     white-space: nowrap;
 }
 
+.last-item .nav-item{
+    margin-left: 10px;
+}
+
 .last-item{
     background-color: #ebebeb;
-}
-
-.last-item li:nth-child(1){
-    margin-left: 40px;
-    margin-right: 50px;
-}
-
-.last-item li:nth-child(2){
-    margin-right: 60px;
+    width: 30%;
 }
 
 .first-item{
@@ -240,6 +187,23 @@ header{
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+}
+
+.wrap{
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+}
+
+.jc-between{
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+}
+
+.jc-center{
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .header-wrapper{
@@ -263,8 +227,7 @@ h1{
 }
 
 h1 span{
-    color: #edc22e;
-    
+    color: #edc22e; 
 }
 
 button{
@@ -311,7 +274,7 @@ button{
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    margin-right: 63px;
+    margin-right: 60px;
     position: relative;
 }
 
@@ -362,12 +325,6 @@ button{
     text-align: center;
 }
 
-.center-button{
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-}
-
 .timer h5{
     font-family: "adineuePROKZ";
     padding-left: 55%;
@@ -395,12 +352,6 @@ button{
     border-radius: 7px;
     margin: 75px 0 85px 0;
     position: relative;
-}
-
-.jc-flex{
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
 }
 
 .card-header{
@@ -531,11 +482,6 @@ button{
     margin-bottom: 40px;
 }
 
-.wrap{
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-}
-
 .button-more{
     width: 265px;
     height: 58px;
@@ -567,7 +513,7 @@ h3{
     margin-top: 15px;
 }
 
-.teachers > div > p{
+.teachers div p{
     font-size: 18px;
     color: #8c8c8c;
     letter-spacing: 2px;
@@ -620,6 +566,11 @@ h3{
 svg{
     width: 50%;
     height: 170px;
+    shape-rendering:geometricPrecision; 
+    text-rendering:geometricPrecision; 
+    image-rendering:optimizeQuality; 
+    fill-rule:evenodd; 
+    clip-rule:evenodd
 }
 
 .str0 {
@@ -771,6 +722,14 @@ svg:hover .fil1{
     margin-bottom: 80px;
 }
 
+.form{
+    text-align: center;
+}
+
+.form h3{
+    color: #ffffff;
+}
+
 .choise-item{
     width: 100%;
     max-width: 260px;
@@ -805,14 +764,6 @@ svg:hover .fil1{
     min-height: 337px;
     padding: 40px 100px 0 70px;
     margin-bottom: 82px;
-}
-
-.form h4{
-    font-family: "Helios-Cond";
-    color: #ffffff;
-    text-transform: uppercase;
-    font-size: 50px;
-    width: 174%;
 }
 
 input,
@@ -927,92 +878,10 @@ footer{
     min-height: 405px;
 }
 
-.popup-course{
-    top: 22%;
-    width: 100%;
-    max-width: 1008px;
-    max-height: 514px;
-}
-
-.popup-complete{
-    top: 22%;
-    width: 100%;
-    max-width: 444px;
-    height: 150px;
-}
-
-.popup-result{
-    top: 1%;
-    width: 100%;
-    max-width: 834px;
-}
-
-.popup-result span{
-    padding: 5px;
-}
-
-.popup-group{
-    top: 1%;
-    width: 100%;
-    max-width: 647px;
-}
-
-.popup-teachers{
-    top: 1%;
-    width: 100%;
-    max-width: 647px;
-}
-
 .popup-header button {
     position: absolute; 
     top: 20px; 
     right: 25px; 
-}
-
-.popup-group p{
-    padding: 40px 54px 56px 54px;
-    text-align: left;
-    font-size: 18px;
-    color: #565656;
-    line-height: 25px;
-}
-
-.popup-result .info-course input,
-.popup-result .info-course select{
-    width: 100%;
-    max-width: 585px;
-}
-
-.popup-result h5{
-    font-size: 25px;
-    letter-spacing: 2px;
-    line-height: 26px;
-    font-weight: 100;
-    margin-top: 30px;
-}
-
-.popup-result h5 span{
-    font-weight: bold;
-}
-
-.popup-text{
-    width: 110%;
-    overflow-y: scroll;
-    height: 339px;
-    padding: 55px 60px 60px 40px;
-    text-align: left;
-    font-size: 18px;
-    color: #565656;
-    letter-spacing: 1.5px;
-    line-height: 27px; 
-}
-
-.popup-test{
-    top: 0%;
-    width: 100%;
-    max-width: 833px;
-    height: auto;
-    max-height: 95vh;
 }
 
 .overlay_popup {
@@ -1096,141 +965,6 @@ footer{
     justify-content: center;
 }
 
-.progress-bar{
-    width: 100%;
-    max-width: 337px;
-    height: 7px;
-    border: 1px solid #b8b8b8;
-    border-radius: 3px;
-    background: -o-linear-gradient(left , #edc22e 70%, #ebebeb 30%);
-    background: -webkit-gradient(linear , left top, right top , color-stop(70%, #edc22e), color-stop(30%, #ebebeb));
-    background: linear-gradient(to right , #edc22e 70%, #ebebeb 30%);
-    position: relative;
-}
-
-.text-progress{
-    position: absolute;
-    top: -20px;
-    right: 280px;
-}
-
-.test-question{
-    color: #e9bf2d;
-    font-size: 22.5px;
-    padding-top: 20px;
-    padding-left: 60px;
-    letter-spacing: 2px;
-    display: block;
-}
-
-.test-name{
-    color: #b6b6b6;
-    font-size: 22.5px;
-    padding-top: 20px;
-    padding-left: 60px;
-    letter-spacing: 2px;
-    text-align: left;
-    display: none;
-}
-
-.test-button-prev{
-    width: 128px;
-    height: 47px;
-    border: 1px solid #d0d0d0;
-    border-radius: 40px;
-    background-color: #ffffff;
-    margin-right: -70px;
-    padding: 1%;
-}
-
-.test-button-next{
-    width: 200px;
-    height: 47px;
-    background-color: #edc22e;
-    color: #ffffff;
-    border: 0;
-    border-radius: 40px;
-    cursor: pointer;
-    font-family:"adineuePROKZ";
-    letter-spacing: 2px;
-    padding-top: 1.5%;
-    text-decoration: none;
-}
-
-.test-button-prev > img{
-    height: 33px;
-    width: 75px;
-    margin-left: 17px;
-}
-
-.test-wrap{
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-top: 50px;
-}
-
-[type="radio"]:checked,
-[type="radio"]:not(:checked) {
-    position: absolute;
-    left: -9999px;
-}
-[type="radio"]:checked + label,
-[type="radio"]:not(:checked) + label
-{
-    position: relative;
-    padding-left: 28px;
-    cursor: pointer;
-    line-height: 20px;
-    display: inline-block;
-    width: 339px;
-    height: 59px;
-    border: 1px solid #b8b8b8;
-    border-radius: 40px;
-    padding-top: 18px;
-    margin: 35px 10px 0 50px;
-}
-[type="radio"]:checked + label:before,
-[type="radio"]:not(:checked) + label:before {
-    content: '';
-    position: absolute;
-    left: 19px;
-    top: 11px;
-    width: 26px;
-    height: 26px;
-    border: 1px solid #ddd;
-    border-radius: 100%;
-    background: #fff;
-}
-[type="radio"]:checked + label:after,
-[type="radio"]:not(:checked) + label:after {
-    content: '';
-    width: 15px;
-    height: 15px;
-    background: #e9bf2d;
-    position: absolute;
-    top: 18px;
-    left: 25px;
-    border-radius: 100%;
-    -webkit-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
-}
-[type="radio"]:not(:checked) + label:after {
-    opacity: 0;
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-        transform: scale(0);
-}
-[type="radio"]:checked + label:after {
-    opacity: 1;
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-        transform: scale(1);
-}
-
 /* custom scrollbar */
 
 ::-webkit-scrollbar-button {
@@ -1266,24 +1000,12 @@ footer{
     width: 11px;
     }
 
-@media screen and (min-width: 1850px){
-    .nav-item{
-        margin-right: 40px;
-    }
-}
-
 @media screen and (max-width: 1850px){
     .next-slide{
         left: 93%;
     }
     .prev-slide{
         right: 95%;
-    }
-}
-
-@media screen and (max-width: 1400px){
-    .nav-item{
-        margin-right: 2.5%;
     }
 }
 
@@ -1341,14 +1063,12 @@ footer{
     padding-left: 0px;
     text-align: center;
     }
-    .adress > img{
+    .adress img,
+    .actions h5{
         display: none;
     }
     .test-button-prev{
         margin-right: 0;
-    }
-    .actions h5{
-        display: none;
     }
 }
 
@@ -1400,10 +1120,10 @@ footer{
         cursor: pointer;
         margin: 0 auto;
     }
-    nav{
-        display: none;
-    }
-    .timer h5{
+    nav,
+    .timer h5,
+    .time::before,
+    .time::after{
         display: none;
     }
     .nav-item a{
@@ -1421,15 +1141,14 @@ footer{
         height: 130px;
         margin-right: 40px;
     }
-    .time::before,
-    .time::after{
-        display: none;
-    }
     .under-time{
         padding-left: 0px;
     }
     h3{
         padding-left: 10px;
+    }
+    footer.flex{
+        display: block;
     }
 }
 
@@ -1506,30 +1225,10 @@ footer{
         width: 260px;
         margin: 0 auto;
     }
-    .progress-bar{
-        margin-top: 15px;
-        margin-bottom: 15px;
-    }
     .logo img{
         width: 100%;
         height: auto;
-    }
-    .process-item p{
-        font-size: 13px;
-    }
-    [type="radio"]:checked + label, [type="radio"]:not(:checked) + label{
-        margin: 0 auto;
-        margin-top: 14px;
-        width: 300px;
-    }
-    .test-button-next{
-        padding-top: 3.5%;
-    }
-    .test-question{
         padding-left: 0px;
-    }
-    .popup-test .popup-header button{
-        right: 88%;
     }
     .feedback-item img{
         display: none;
