--- a/colibri/css/style.css
+++ b/colibri/css/style.css
@@ -66,7 +66,6 @@ header{
 }
 
 button{
-    font-family: "adineuePRO-bold";
     background-color: #5276b4;
     font-size: 20px;
     line-height: 25px;
@@ -132,18 +131,6 @@ a[name]{
     background:#000; 
     opacity:0.5;
 }
-
-.overlay-start{
-    display:none;
-    position:fixed;
-    z-index: 200;
-    top:0;
-    right:0; 
-    left:0;
-    bottom:0;
-    background: #ffffff; 
-    opacity: 1;
-}
   
 .flex{
     display: -webkit-box;
@@ -156,12 +143,12 @@ a[name]{
         flex-wrap: wrap;
 }
 
-.jc-sa{
+.jc-around{
     -ms-flex-pack: distribute;
         justify-content: space-around;
 }
 
-.jc-sb{
+.jc-between{
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
@@ -507,10 +494,6 @@ input[type='number'] {
     letter-spacing: 1.5px;
 }
 
-/* .why-item:nth-child(5) > p{
-    font-size: 13px;
-} */
-
 .why-item p span{
     font-family: "adineuePRO-light";
     text-transform: lowercase;
@@ -650,6 +633,7 @@ h3{
     border-radius: 5px;
     margin-right: 25px;
     background-color: #ffffff;
+    margin: 0 auto;
 }
 
 .gallery-item p{
@@ -663,13 +647,13 @@ h3{
     margin-bottom: 25px;
 }
 
-body > section.gallery.clip.clip-top > div > div > div.owl-nav.disabled{
+.slide-one .owl-nav{
     display: block;
     position: relative;
     margin-top: -290px;
 }
 
-body > section.gallery.clip.clip-top > div > div > div.owl-nav.disabled > button.owl-prev{
+.slide-one .owl-nav button.owl-prev{
     background-image: url(../img/next.png);
     -webkit-transform: rotate(180deg);
         -ms-transform: rotate(180deg);
@@ -683,7 +667,7 @@ body > section.gallery.clip.clip-top > div > div > div.owl-nav.disabled > button
     position: absolute;
 }
 
-body > section.gallery.clip.clip-top > div > div > div.owl-nav.disabled > button.owl-next{
+.slide-one .owl-nav button.owl-next{
     background-image: url(../img/next.png);
     background-repeat: no-repeat;
     width: 30px;
@@ -1093,20 +1077,6 @@ footer img{
     margin-left: -240px;
 }
 
-.main-logo{
-    position: fixed;
-    top: 150px;
-    width: 100%;
-    max-width: 100px;
-    margin: 0 auto;
-    left: 50%;
-    margin-left: -240px;
-}
-
-.little-logo{
-    opacity: 0;
-}
-
 .not_me_remove .popup-form{
     width: 100%;
     max-width: 500px;
@@ -1160,23 +1130,20 @@ footer img{
     border-radius: 5px;
 }
 
-.check_robot_fields { display: none; }
-input.error{border: 1px solid rgb(255,50,50); }
-input.error::-webkit-input-placeholder{color: rgb(255,50,50); }
-input.error:-moz-placeholder{color: rgb(255,50,50); }
-
-.animate{
-    transform: translate(-700px, -240px) scale(0.5);
-    transition: 4s;
-    transition-delay: 4s;
-    opacity: 0;
-    z-index: 222;
+.check_robot_fields{ 
+    display: none; 
 }
 
-.animate1{
-    transition: 4s;
-    transition-delay: 4s;
-    opacity: 1;
+input.error{
+    border: 1px solid rgb(255,50,50); 
+
+}
+input.error::-webkit-input-placeholder{
+    color: rgb(255,50,50); 
+}
+
+input.error:-moz-placeholder{
+    color: rgb(255,50,50); 
 }
 
 .accordion{
@@ -1193,7 +1160,7 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
 }
 
 @media screen and (max-width: 1450px){
-    body > section.gallery.clip.clip-top > div > div > div.owl-nav.disabled > button.owl-next{
+    .slide-one .owl-nav button.owl-next{
         right: -55px;
     }
     .why-content{
@@ -1210,6 +1177,7 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
     .mobile-why{
         display: block;
         justify-content: center;
+        width: 100%;
     }
     .quote{
         margin-top: 10px;
@@ -1224,20 +1192,8 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
 }
 
 @media screen and (max-width: 1300px){
-    body > section.gallery.clip.clip-top > div > div > div.owl-nav.disabled,
-    body > section.gallery.clip.clip-top > div > div > div.owl-nav.disabled > button.owl-prev,
-    body > section.gallery.clip.clip-top > div > div > div.owl-nav.disabled > button.owl-next{
-        display: none !important;
-    }
     .why-scroll{
         height: 180px;
-    }
-    .little-logo{
-        opacity: 1;
-    }
-    .main-logo,
-    .overlay-start{
-        display: none;
     }
 }
 
@@ -1334,8 +1290,5 @@ input.error:-moz-placeholder{color: rgb(255,50,50); }
         padding-right: 0px;
         margin-left: 0px;
         left: 0;
-    }
-    .owl-nav{
-        display: none;
     }
 }
