--- a/english_school/css/style.css
+++ b/english_school/css/style.css
@@ -976,14 +976,15 @@ footer{
     
     ::-webkit-scrollbar-track {
     background-color:#32312e;
-    box-shadow:0px 0px 3px #000 inset;
+    -webkit-box-shadow:0px 0px 3px #000 inset;
+            box-shadow:0px 0px 3px #000 inset;
     }
     
     ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 5px;
     border-radius: 5px;
     background-color:#ffcb17;
-    box-shadow:0px 1px 1px #fff inset;
+    -webkit-box-shadow:0px 1px 1px #fff inset;
+            box-shadow:0px 1px 1px #fff inset;
     background-image:url(../img/59610063.png);
     background-position:center;
     background-repeat:no-repeat;
